<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/simpsons_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/the_simpsons_0"
        android:src="@drawable/simpsons_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <ImageView
        android:id="@+id/simpsons_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/the_simpsons_1"
        android:src="@drawable/simpsons_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <ImageView
        android:id="@+id/simpsons_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/the_simpsons_2"
        android:src="@drawable/simpsons_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <ImageView
        android:id="@+id/homer_simpson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="328dp"
        android:contentDescription="@string/homer_simpson"
        android:src="@drawable/homer_simpson"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/engranatge_vermell"
        android:layout_width="101dp"
        android:layout_height="99dp"
        android:layout_marginStart="492dp"
        android:contentDescription="@string/engranatge_vermell"
        android:src="@drawable/engranatge_vermell"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <ImageView
        android:id="@+id/engranatge_verd"
        android:layout_width="80dp"
        android:layout_height="87dp"
        android:layout_marginStart="580dp"
        android:contentDescription="@string/engranatge_verd"
        android:src="@drawable/engranatge_verd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <ImageView
        android:id="@+id/engranatge_blau"
        android:layout_width="74dp"
        android:layout_height="78dp"
        android:layout_marginStart="536dp"
        android:contentDescription="@string/engranatge_blau"
        android:src="@drawable/engranatge_blau"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.375" />

    <ImageView
        android:id="@+id/ull"
        android:layout_width="46dp"
        android:layout_height="59dp"
        android:layout_marginStart="464dp"
        android:contentDescription="@string/ull"
        android:src="@drawable/ull"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446" />

    <ImageView
        android:id="@+id/donut"
        android:layout_width="177dp"
        android:layout_height="147dp"
        android:layout_marginStart="120dp"
        android:contentDescription="@string/donut"
        android:src="@drawable/donut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />
</androidx.constraintlayout.widget.ConstraintLayout>

